sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:23: error: value and is not a member of Boolean
  } while(swapped and end>=0)
                  ^